Link to termkey(7) from other manpages, delete some of the duplicated sections

--- a/man/termkey_interpret_mouse.3
+++ b/man/termkey_interpret_mouse.3
@@ -38,6 +38,6 @@ If passed a \fIkey\fP event of the type \fBTERMKEY_TYPE_MOUSE\fP, this function 
 .PP
 For other event types it will return \fBTERMKEY_RES_NONE\fP, and its effects on any variables whose pointers were passed in, are undefined.
 .SH "SEE ALSO"
-.BR termkey_new (3),
 .BR termkey_waitkey (3),
 .BR termkey_getkey (3),
+.BR termkey (7)
