--- a/man/termkey_keyname2sym.3
+++ b/man/termkey_keyname2sym.3
@@ -16,7 +16,7 @@ Because the key names are stored in an array indexed by the symbol number, this 
 .SH "RETURN VALUE"
 \fBtermkey_keyname2sym\fP() returns a symbolic key constant, or \fBTERMKEY_SYM_UNKNOWN\fP.
 .SH "SEE ALSO"
-.BR termkey_new (3),
 .BR termkey_get_keyname (3),
 .BR termkey_lookup_keyname (3),
-.BR termkey_strpkey (3)
+.BR termkey_strpkey (3),
+.BR termkey (7)
