--- a/man/termkey_lookup_keyname.3
+++ b/man/termkey_lookup_keyname.3
@@ -17,7 +17,7 @@ Because the key names are stored in an array indexed by the symbol number, this 
 .SH "RETURN VALUE"
 \fBtermkey_lookup_keyname\fP() returns a pointer to the first character after a recognised name, or \fBNULL\fP if the string does not begin with the name of a recognised symbolic key.
 .SH "SEE ALSO"
-.BR termkey_new (3),
 .BR termkey_get_keyname (3),
 .BR termkey_keyname2sym (3),
-.BR termkey_strpkey (3)
+.BR termkey_strpkey (3),
+.BR termkey (7)
