--- a/man/termkey_set_waittime.3
+++ b/man/termkey_set_waittime.3
@@ -17,6 +17,6 @@ Link with \fI-ltermkey\fP.
 .SH "RETURN VALUE"
 \fBtermkey_set_waittime\fP() returns no value. \fBtermkey_get_waittime\fP() returns the current wait time in miliseconds.
 .SH "SEE ALSO"
-.BR termkey_new (3),
 .BR termkey_getkey (3),
-.BR termkey_waitkey (3)
+.BR termkey_waitkey (3),
+.BR termkey (7)
