--- a/man/termkey_strpkey.3
+++ b/man/termkey_strpkey.3
@@ -32,4 +32,5 @@ After a successful parse, \fBtermkey_strpkey\fP() returns a pointer to the first
 .SH "SEE ALSO"
 .BR termkey_new (3),
 .BR termkey_strfkey (3),
-.BR termkey_keycmp (3)
+.BR termkey_keycmp (3),
+.BR termkey (7)
