--- a/man/termkey_canonicalise.3
+++ b/man/termkey_canonicalise.3
@@ -10,18 +10,13 @@ termkey_canonicalise \- canonicalise a key event
 .sp
 Link with \fI-ltermkey\fP.
 .SH DESCRIPTION
-\fBtermkey_canonicalise\fP(3) modifies the key event structure given by \fIkey\fP according to the canonicalisation flags set on the given \fItk\fP instance. This operation is performed implicitly by \fBtermkey_getkey\fP(3), \fBtermkey_waitkey\fP(3) and \fBtermkey_strpkey\fP(3), and is also provided explicitly by this function.
+\fBtermkey_canonicalise\fP(3) modifies the key event structure given by \fIkey\fP according to the canonicalisation flags set on the given \fBtermkey\fP instance. This operation is performed implicitly by \fBtermkey_getkey\fP(3), \fBtermkey_waitkey\fP(3) and \fBtermkey_strpkey\fP(3), and is also provided explicitly by this function.
 .PP
-The canonicalisation operation is affected by the following flags:
-.TP
-.B TERMKEY_CANON_SPACESYMBOL
-If this flag is set then a Unicode space character is represented using the \fBTERMKEY_SYM_SPACE\fP symbol. If this flag is not set, it is represented by the U+0020 Unicode codepoint.
-.TP
-.B TERMKEY_CANON_DELBS
-If this flag is set then an ASCII DEL character is represented by the \fBTERMKEY_SYM_BACKSPACE\fP symbol. If not, it is represented by \fBTERMKEY_SYM_DEL\fP. An ASCII BS character is always represented by \fBTERMKEY_SYM_BACKSPACE\fP, regardless of this flag.
+See \fBtermkey\fP(7) for a list of canonicalisation flags.
 .SH "RETURN VALUE"
 \fBtermkey_canonicalise\fP() returns no value.
 .SH "SEE ALSO"
 .BR termkey_set_canonflags (3),
 .BR termkey_waitkey (3),
-.BR termkey_strpkey (3)
+.BR termkey_strpkey (3),
+.BR termkey (7)
