--- a/man/termkey_get_fd.3
+++ b/man/termkey_get_fd.3
@@ -10,9 +10,10 @@ termkey_get_fd \- obtain the file descriptor for the terminal
 .sp
 Link with \fI-ltermkey\fP.
 .SH DESCRIPTION
-\fBtermkey_get_fd\fP() returns the file descriptor that was passed as the \fIfd\fP argument to \fBtermkey_new\fP(3).
+\fBtermkey_get_fd\fP() returns the file descriptor that the \fBtermkey\fP(7) instance is using to read bytes from.
 .SH "RETURN VALUE"
 \fBtermkey_get_fd\fP() returns the current file descriptor, or -1 if no file descriptor is associated with this instance.
 .SH "SEE ALSO"
 .BR termkey_new (3),
-.BR termkey_get_flags (3)
+.BR termkey_get_flags (3),
+.BR termkey (7)
