--- a/man/termkey_strfkey.3
+++ b/man/termkey_strfkey.3
@@ -43,4 +43,5 @@ When formatting a \fBTERMKEY_TYPE_UNICODE\fP key structure, this function uses t
 .BR termkey_getkey (3),
 .BR termkey_waitkey (3),
 .BR termkey_get_keyname (3),
-.BR termkey_strpkey (3)
+.BR termkey_strpkey (3),
+.BR termkey (7)
