--- a/man/termkey_set_canonflags.3
+++ b/man/termkey_set_canonflags.3
@@ -13,9 +13,9 @@ Link with \fI-ltermkey\fP.
 .SH DESCRIPTION
 \fBtermkey_set_canonflags\fP() changes the set of canonicalisation flags in the \fBtermkey\fP(7) instance to those given by \fInewflags\fP. For detail on the available flags and their meaning, see the \fBtermkey\fP manpage.
 .PP
-\fBtermkey_get_canonflags\fP() returns the value set by the last call to \fBtermkey_canonicalise\fP().
+\fBtermkey_get_canonflags\fP() returns the value set by the last call to \fBtermkey_set_canonflags\fP().
 .SH "RETURN VALUE"
-\fBtermkey_set_flags\fP() returns no value. \fBtermkey_get_flags\fP() returns the current canonicalisation flags.
+\fBtermkey_set_canonflags\fP() returns no value. \fBtermkey_get_canonflags\fP() returns the current canonicalisation flags.
 .SH "SEE ALSO"
 .BR termkey_canonicalise (3),
 .BR termkey (7)
