Added manpage for termkey_{get,set}_buffer_size

--- a/man/termkey_get_buffer_remaining.3
+++ b/man/termkey_get_buffer_remaining.3
@@ -17,5 +17,7 @@ Link with \fI-ltermkey\fP.
 .SH "SEE ALSO"
 .BR termkey_push_bytes (3),
 .BR termkey_advisereadable (3),
+.BR termkey_set_buffer_size (3),
+.BR termkey_get_buffer_size (3),
 .BR termkey_getkey (3),
 .BR termkey (7)
