--- a/man/termkey_new.3
+++ b/man/termkey_new.3
@@ -42,4 +42,5 @@ Additionally, \fBtermkey_new\fP() may fail if \fBfstat\fP(2) or \fBwrite\fP(2) f
 .BR termkey_get_flags (3),
 .BR termkey_get_fd (3),
 .BR termkey_get_buffer_remaining (3),
+.BR termkey_get_buffer_size (3),
 .BR termkey (7)
