Fix manpage bug in termkey_start.3

--- a/man/termkey_start.3
+++ b/man/termkey_start.3
@@ -15,7 +15,7 @@ Link with \fI\-ltermkey\fP.
 .SH DESCRIPTION
 \fBtermkey_start\fP() enables the terminal IO operations of the given \fBtermkey\fP(7) instance, including sending a terminal control sequence and setting the \fBtermios\fP(3) modes required.
 .PP
-\fBtermkey_stop\fP() disables terminal IO operations, by reversing the steps taken by \fPtermkey_start\fP(). A newly-constructed \fBtermkey\fP instance will have terminal IO enabled already.
+\fBtermkey_stop\fP() disables terminal IO operations, by reversing the steps taken by \fBtermkey_start\fP(). A newly-constructed \fBtermkey\fP instance will have terminal IO enabled already.
 .PP
 \fBtermkey_is_started\fP() enquires whether terminal IO is currently enabled.
 .SH "RETURN VALUE"
