--- a/man/termkey_strpkey.3
+++ b/man/termkey_strpkey.3
@@ -16,13 +16,13 @@ Link with \fI-ltermkey\fP.
 The \fIformat\fP argument specifies the format expected in the string, as a bitmask of the following constants:
 .TP
 .B TERMKEY_FORMAT_LONGMOD
-Expect full modifier names e.g. "Shift-" instead of abbreviating to "S-".
+Expect full modifier names e.g. "\f(CWShift-\fP" instead of abbreviating to "\f(CWS-\fP".
 .TP
 .B TERMKEY_FORMAT_CARETCTRL
-If the only modifier is \fBTERMKEY_MOD_CTRL\fP on a plain letter, accept it as "^X" rather than "Ctrl-X".
+If the only modifier is \fBTERMKEY_MOD_CTRL\fP on a plain letter, accept it as "\f(CW^X\fP" rather than "\f(CWCtrl-X\fP".
 .TP
 .B TERMKEY_FORMAT_ALTISMETA
-Use the name "Meta" or the letter "M" instead of "Alt" or "A".
+Use the name "\f(CWMeta\fP" or the letter "\f(CWM\fP" instead of "\f(CWAlt\fP" or "\f(CWA\fP".
 .PP
 Before returning, this function canonicalises the \fIkey\fP structure according to the rules given for \fBtermkey_canonicalise\fP(3).
 .PP
