--- a/man/termkey_strfkey.3
+++ b/man/termkey_strfkey.3
@@ -27,6 +27,9 @@ Use the name "\f(CWMeta\fP" or the letter "\f(CWM\fP" instead of "\f(CWAlt\fP" o
 .B TERMKEY_FORMAT_WRAPBRACKET
 If the key event is a special key instead of unmodified Unicode, wrap it in "\f(CW<brackets>\fP".
 .TP
+.B TERMKEY_FORMAT_SPACEMOD
+Use spaces instead of hyphens to separate the modifier name(s) from the base key name.
+.TP
 .B TERMKEY_FORMAT_MOUSE_POS
 If the event is a mouse event, include the position rendered as "\f(CW@ (col,line)\fP".
 .PP
