--- a/man/termkey_strpkey.3
+++ b/man/termkey_strpkey.3
@@ -26,6 +26,9 @@ Use the name "\f(CWMeta\fP" or the letter "\f(CWM\fP" instead of "\f(CWAlt\fP" o
 .TP
 .B TERMKEY_FORMAT_SPACEMOD
 Expect spaces instead of hyphens to separate the modifer name(s) from the base key name.
+.TP
+.B TERMKEY_FORMAT_LOWERMOD
+Expect lowercase for the modifier name
 .PP
 Before returning, this function canonicalises the \fIkey\fP structure according to the rules given for \fBtermkey_canonicalise\fP(3).
 .PP
