--- a/man/termkey_strfkey.3
+++ b/man/termkey_strfkey.3
@@ -30,6 +30,9 @@ If the key event is a special key instead of unmodified Unicode, wrap it in "\f(
 .B TERMKEY_FORMAT_SPACEMOD
 Use spaces instead of hyphens to separate the modifier name(s) from the base key name.
 .TP
+.B TERMKEY_FORMAT_LOWERMOD
+Use lowercase for the modifier name
+.TP
 .B TERMKEY_FORMAT_MOUSE_POS
 If the event is a mouse event, include the position rendered as "\f(CW@ (col,line)\fP".
 .PP
