Added TERMKEY_FORMAT_LOWERSPACE for strfkey() only

--- a/man/termkey_strfkey.3
+++ b/man/termkey_strfkey.3
@@ -31,7 +31,10 @@ If the key event is a special key instead of unmodified Unicode, wrap it in "\f(
 Use spaces instead of hyphens to separate the modifier name(s) from the base key name.
 .TP
 .B TERMKEY_FORMAT_LOWERMOD
-Use lowercase for the modifier name
+Use lowercase for the modifier name.
+.TP
+.B TERMKEY_FORMAT_LOWERSPACE
+Use lowercase for the key name instead of camelCase (for example "\f(CWpage down\fP" instead of "\f(CWPageDown\fP").
 .TP
 .B TERMKEY_FORMAT_MOUSE_POS
 If the event is a mouse event, include the position rendered as "\f(CW@ (col,line)\fP".
