Added TERMKEY_FORMAT_LOWERSPACE for strpkey() also

--- a/man/termkey_strfkey.3
+++ b/man/termkey_strfkey.3
@@ -34,7 +34,7 @@ Use spaces instead of hyphens to separate the modifier name(s) from the base key
 Use lowercase for the modifier name.
 .TP
 .B TERMKEY_FORMAT_LOWERSPACE
-Use lowercase for the key name instead of camelCase (for example "\f(CWpage down\fP" instead of "\f(CWPageDown\fP").
+Use lowercase with spaces in for the key name instead of camelCase (for example "\f(CWpage down\fP" instead of "\f(CWPageDown\fP").
 .TP
 .B TERMKEY_FORMAT_MOUSE_POS
 If the event is a mouse event, include the position rendered as "\f(CW@ (col,line)\fP".
