Minor doc update - strpkey expects strings, doesn't use them

--- a/man/termkey_strpkey.3
+++ b/man/termkey_strpkey.3
@@ -22,7 +22,7 @@ Expect full modifier names e.g. "\f(CWShift-\fP" instead of abbreviating to "\f(
 If the only modifier is \fBTERMKEY_MOD_CTRL\fP on a plain letter, accept it as "\f(CW^X\fP" rather than "\f(CWCtrl-X\fP".
 .TP
 .B TERMKEY_FORMAT_ALTISMETA
-Use the name "\f(CWMeta\fP" or the letter "\f(CWM\fP" instead of "\f(CWAlt\fP" or "\f(CWA\fP".
+Expect the name "\f(CWMeta\fP" or the letter "\f(CWM\fP" instead of "\f(CWAlt\fP" or "\f(CWA\fP".
 .TP
 .B TERMKEY_FORMAT_SPACEMOD
 Expect spaces instead of hyphens to separate the modifer name(s) from the base key name.
