Docs fix - fullstop at end of sentence

--- a/man/termkey_strpkey.3
+++ b/man/termkey_strpkey.3
@@ -28,7 +28,7 @@ Expect the name "\f(CWMeta\fP" or the letter "\f(CWM\fP" instead of "\f(CWAlt\fP
 Expect spaces instead of hyphens to separate the modifer name(s) from the base key name.
 .TP
 .B TERMKEY_FORMAT_LOWERMOD
-Expect lowercase for the modifier name
+Expect lowercase for the modifier name.
 .TP
 .B TERMKEY_FORMAT_LOWERSPACE
 Expect lowercase with spaces in for the key name instead of camelCase (for example "\f(CWpage down\fP" instead of "\f(CWPageDown\fP").
