--- a/man/termkey_strfkey.3
+++ b/man/termkey_strfkey.3
@@ -43,6 +43,9 @@ The following shortcuts are provided for common combinations of format bits:
 .TP
 .B TERMKEY_FORMAT_VIM
 Shortcut to set \fBALTISMETA\fP and \fBWRAPBRACKET\fP, to give an output close to the format the \fIvim\fP editor uses.
+.TP
+.B TERMKEY_FORMAT_URWID
+Shortcut to set \fBALTISMETA\fP, \fBLONGMOD\fP, \fBLOWERMOD\fP, \fBSPACEMOD\fP and \fBLOWERSPACE\fP, to give an output close to the format the \fIurwid\fP python library uses.
 .PP
 When formatting a \fBTERMKEY_TYPE_UNICODE\fP key structure, this function uses the \fIutf8\fP member. If this member contains an empty string (i.e. its first character is 0) then this member will be prefilled by the function from the \fIcode.number\fP member. This can be convenient when the key structure is being constructed programatically by user code.
 .SH "RETURN VALUE"
