Fix various spelling mistakes found by codespell & Vim

--- a/man/termkey_strpkey.3
+++ b/man/termkey_strpkey.3
@@ -25,7 +25,7 @@ If the only modifier is \fBTERMKEY_MOD_CTRL\fP on a plain letter, accept it as "
 Expect the name "\f(CWMeta\fP" or the letter "\f(CWM\fP" instead of "\f(CWAlt\fP" or "\f(CWA\fP".
 .TP
 .B TERMKEY_FORMAT_SPACEMOD
-Expect spaces instead of hyphens to separate the modifer name(s) from the base key name.
+Expect spaces instead of hyphens to separate the modifier name(s) from the base key name.
 .TP
 .B TERMKEY_FORMAT_LOWERMOD
 Expect lowercase for the modifier name.
